--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -105,7 +105,7 @@
   }
 }
 
-@media screen and (max-width: 461px) {
+@media screen and (max-width: 531px) {
   .promo {
     padding: 70px 10px 30px;
     min-height: 636px;
